--- a/pages/carros.html
+++ b/pages/carros.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="../src/CSS/style.css">
 </head>
 <body>
-    <header>
-        <h1 id="logo">Veltrix</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./carros.html">Carros</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-                <li><a href="./sobre.html">Sobre Nós</a></li>
-            </ul>
-        </nav>
-        <h2 id="slogan">Veltrix. Dirija o Futuro.</h2>
-    </header>
+    <section id="fundo">
+        <header>
+            <h1 id="logo">Veltrix</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./carros.html">Carros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="./sobre.html">Sobre Nós</a></li>
+                </ul>
+            </nav>
+            <h2 id="slogan">Veltrix. Dirija o Futuro.</h2>
+        </header>
+    </section>
     <script src="../src/JS/script.js"></script>
 </body>
 </html>
