--- a/pages/contato.html
+++ b/pages/contato.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Veltrix - Contato</title>
     <link rel="stylesheet" href="../src/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="fundo">
-        <header>
-            <h1 id="logo">Veltrix</h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./carros.html">Carros</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
-                    <li><a href="./sobre.html">Sobre Nós</a></li>
-                </ul>
-            </nav>
+        <header class="header">
+            <div class="container">
+                <h1 id="logo">Veltrix</h1>
+                <nav>
+                    <ul class="nav-links">
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="./carros.html">Carros</a></li>
+                        <li><a href="./contato.html" class="active">Contato</a></li>
+                        <li><a href="./sobre.html">Sobre Nós</a></li>
+                    </ul>
+                </nav>
+            </div>
             <h2 id="slogan">Veltrix. Dirija o Futuro.</h2>
         </header>
+
+        <main class="contact-container">
+            <div class="contact-card">
+                <h3>Fale Conosco</h3>
+                <p><strong>Telefone:</strong> (11) 99853-5691</p>
+                <p><strong>Email:</strong> contato@veltrix.com</p>
+                <p><strong>Endereço:</strong> Av. do Futuro, 334 - São Paulo, SP</p>
+                <p><strong>Horário:</strong> Seg a Sex, 09h - 18h</p>
+            </div>
+        </main>
     </section>
     <script src="../src/JS/script.js"></script>
 </body>
