Adicionando as informações na página carros

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
                 <a href="./pages/carros.html" class="btn">Explore Nossos Carros</a>
             </div>
         </section>
+        <section class="sobre-home">
+            <div class="card-container">
+                <div class="car-card">
+                    <h2>Sobre a Veltrix</h2>
+                    <p>
+                        A <strong>Veltrix</strong> é mais do que uma loja de carros — somos movidos pela paixão em redefinir o futuro da mobilidade.
+                        Fundada com a missão de unir inovação, desempenho e sofisticação, oferecemos veículos que traduzem o que há de mais moderno no universo automotivo.
+                    </p>
+                    <p>
+                        Nosso portfólio reúne modelos de última geração, com tecnologia embarcada, design arrojado e foco na sustentabilidade. Acreditamos em uma experiência automotiva que vá além da direção — queremos emocionar e surpreender.
+                    </p>
+                    <p>
+                        Junte-se a nós e descubra por que dirigir um Veltrix é viver o futuro hoje.
+                    </p>
+                    <a href="./pages/sobre.html" class="btn">Saiba Mais</a>
+                </div>
+            </div>
+        </section>
     </section>
     <script src="./src/JS/script.js"></script>
 </body>
