--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -3,24 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
+    <title>Veltrix - Contato</title>
     <link rel="stylesheet" href="../src/CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="fundo">
-        <header>
-            <h1 id="logo">Veltrix</h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./carros.html">Carros</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
-                    <li><a href="./sobre.html">Sobre Nós</a></li>
-                </ul>
-            </nav>
+        <header class="header">
+            <div class="container">
+                <h1 id="logo">Veltrix</h1>
+                <nav>
+                    <ul class="nav-links">
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="./carros.html">Carros</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./sobre.html"class="active">Sobre Nós</a></li>
+                    </ul>
+                </nav>
+            </div>
             <h2 id="slogan">Veltrix. Dirija o Futuro.</h2>
         </header>
+
+        <main class="contact-container">
+            <div class="contact-card">
+                <h3>Quem Somos</h3>
+                <p>
+                    A <strong>Veltrix</strong> nasceu da paixão por velocidade, inovação e elegância. Desde a nossa fundação, temos um único objetivo: redefinir a experiência de dirigir. Somos mais do que uma loja de carros — somos visionários que acreditam no poder da tecnologia automotiva para transformar o futuro da mobilidade.
+                </p>
+
+                <h3>Nossa Missão</h3>
+                <p>
+                    Proporcionar aos nossos clientes veículos que combinam desempenho de ponta, segurança avançada e design surpreendente. Na Veltrix, cada carro é uma obra-prima da engenharia, criada para inspirar emoções e ir além do comum.
+                </p>
+
+                <h3>Inovação e Sustentabilidade</h3>
+                <p>
+                    Estamos comprometidos com um futuro sustentável. Por isso, investimos em modelos híbridos, elétricos e tecnologias limpas que respeitam o meio ambiente sem abrir mão da potência e da sofisticação que nos define.
+                </p>
+
+                <h3>Nosso Compromisso</h3>
+                <p>
+                    Atendimento personalizado, transparência e excelência em cada etapa do processo. Na Veltrix, você encontra mais do que carros — encontra uma equipe dedicada, apaixonada por inovação e pronta para te ajudar a escolher o veículo dos seus sonhos.
+                </p>
+            </div>
+        </main>
     </section>
+
     <script src="../src/JS/script.js"></script>
 </body>
 </html>
