Adicionando a página pagamento.html no projeto

--- a/pages/carros.html
+++ b/pages/carros.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veltrix - Contato</title>
+    <title>Veltrix - Carros</title>
     <link rel="stylesheet" href="../src/CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   </head>
@@ -31,14 +31,14 @@
                 <img src="../src/assets/img/Vtx_esportivo.png" alt="Vtx Thunderbolt" />
                 <p class="preco-carro"><strong>Preço:</strong> R$ 950.000,00</p>
                 <p class="desc-carro">Supersportivo com motor V12, design agressivo e aceleração brutal de 0 a 100 km/h em 2,8s.</p>
-                <a href="#" class="btn-comprar">Comprar</a>
+                <a href="pagamento.html" class="btn-comprar">Comprar</a>
             </div>
             <div class="carro-card">
                 <h4 class="nome-carro">Vtx Vtx Stratus GT </h4>
                 <img src="../src/assets/img/Vtx_luxo.png" alt="Vtx Stratus GT">
                 <p class="preco-carro"><strong>Preço:</strong> R$ 420.000,00</p>
                 <p class="desc-carro">Sedã premium com tecnologia de ponta, conforto absoluto e performance de luxo.</p>
-                <a href="#" class="btn-comprar">Comprar</a>
+                <a href="pagamento.html" class="btn-comprar">Comprar</a>
           </div>
 
           <div class="carro-card">
@@ -46,7 +46,7 @@
             <img src="../src/assets/img/Vtx_ostentação.png" alt="Vtx Velocity R">
             <p class="preco-carro"><strong>Preço:</strong> R$ 670.000,00</p>
             <p class="desc-carro">Cupê esportivo com dirigibilidade refinada, motor turbo e visual icônico.</p>
-            <a href="#" class="btn-comprar">Comprar</a>
+            <a href="pagamento.html" class="btn-comprar">Comprar</a>
           </div>
 
           <div class="carro-card">
@@ -54,7 +54,7 @@
             <img src="../src/assets/img/Vtx_Suv.png" alt="Vtx Titan X">
             <p class="preco-carro"><strong>Preço:</strong> R$ 310.000,00</p>
             <p class="desc-carro">SUV robusto com espaço para a família, tração inteligente e visual elegante.</p>
-            <a href="#" class="btn-comprar">Comprar</a>
+            <a href="pagamento.html" class="btn-comprar">Comprar</a>
           </div>
 
         </div>
